force-app/main/default/objects/AC_Unavailable_Calendar__c/AC_Unavailable_Calendar__c.object-meta.xml
<CustomObject>
    <label>AC Unavailable Calendar</label>
    <nameField>
        <displayFormat>UC-{00000}</displayFormat>
        <label>AC Unavailable Calendar Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unavailable Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>