force-app/main/default/objects/AC_Unavailable_Calendar__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unavailable_Reasons</valueSetName>
    </valueSet>
</CustomField>