force-app/main/default/objects/AC_Unavailable_Calendar__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date that technician is unavailable</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>