force-app/main/default/objects/AC_Unavailable_Calendar__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>AC_Technician__c</referenceTo>
    <relationshipLabel>Unavailable Calendars</relationshipLabel>
    <relationshipName>Unavailable_Calendars</relationshipName>
    <type>Lookup</type>
</CustomField>